tempfile/derive_more/tests/compile_fail/display/wrong_unnamed_parameter.rs
#[derive(derive_more::Display)]
#[display("Stuff({_1})")]
pub struct Foo(String);

fn main() {}
